[tool.poetry]
name = "ddd-kafka"
version = "0.1.0"
description = ""
authors = ["x3m4llk0 <x3m4llk0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
motor = "^3.4.0"
uvicorn = "^0.30.1"
ipython = "^8.25.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
